fix: swagger endpoint
